--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nuxt": "^3.13.0",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.2.2",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-masonry-wall": "^0.3.2"
   },
   "overrides": {
     "vue": "latest"
