--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/i18n": "^8.5.2",
     "@nuxtjs/sanity": "^1.12.1",
+    "@nuxtjs/sitemap": "^7.2.10",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
     "@sanity/image-url": "^1.0.2",
