--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.4.4",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.0.7",
     "dayjs-nuxt": "^2.1.11",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-pseudo-elements": "^2.0.0"
   },
   "engines": {
