--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "dependencies": {
     "@nuxt/icon": "^1.5.0",
     "@nuxt/image": "^1.7.0",
-    "@nuxtjs/i18n": "^8.5.2",
+    "@nuxtjs/i18n": "^9.3.0",
     "@nuxtjs/sanity": "^1.12.1",
     "@nuxtjs/sitemap": "^7.2.10",
-    "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
     "@sanity/image-url": "^1.0.2",
+    "@tailwindcss/vite": "^4.1.7",
     "@yeger/vue-masonry-wall": "^5.0.18",
     "gsap": "npm:@gsap/shockingly@^3.12.5",
-    "nuxt": "^3.13.0",
+    "nuxt": "^3.17.4",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.2.2",
+    "tailwindcss": "^4.1.7",
     "vue": "latest"
   },
   "overrides": {
@@ -30,12 +31,7 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.4.4",
-    "autoprefixer": "^10.4.21",
-    "cssnano": "^7.0.7",
-    "dayjs-nuxt": "^2.1.11",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-pseudo-elements": "^2.0.0"
+    "dayjs-nuxt": "^2.1.11"
   },
   "engines": {
     "node": "22.x"
